<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rlTop"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_marginTop="-1dp"
        android:background="#000000" >

        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:background="@drawable/toubu" />

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="70dp"
            android:layout_height="36dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/fanhui" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/member_top_title"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llMenber"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="2dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:background="@drawable/btn_above_item"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/font_18"
                    android:layout_marginLeft="8dp"
                    android:text="@string/account" />

                <EditText
                    android:id="@+id/et_member_manager_account_login"
                    android:layout_width="0dp"
                    android:layout_height="25dp"
                    android:layout_weight="1.0"
                    android:layout_marginLeft="10dp"
                    android:background="@null"
                    android:gravity="center_vertical" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_middle_item"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/font_18"
                    android:layout_marginLeft="8dp"
                    android:text="@string/password" />

                <EditText
                    android:id="@+id/et_member_manager_account_password"
                    android:layout_width="0dp"
                    android:layout_weight="1.0"
                    android:layout_height="25dp"
                    android:background="@null"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:background="@drawable/btn_below_item"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/font_18"
                    android:layout_marginLeft="8dp"
                    android:text="@string/affirm_password" />

                <EditText
                    android:id="@+id/et_member_manager_account_repassword"
                    android:layout_width="0dp"
                    android:layout_weight="1.0"
                    android:background="@null"
                    android:layout_height="25dp"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:singleLine="true" />
            </LinearLayout>
        </LinearLayout>
        <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/member_longbtn"
        android:text="@string/affirm"
        android:textSize="18sp"
        android:textColor="#FFFFFFFF" />
    </LinearLayout>

    

</LinearLayout>