<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    tools:context=".LoginActivity" >

    <RelativeLayout
        android:id="@+id/rlTop"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_marginTop="-1dp"
        android:background="@drawable/toubu" >

       

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="70dp"
            android:layout_height="36dp"
            android:layout_marginLeft="10dp"
          	android:layout_centerVertical="true"
            android:background="@drawable/fanhui" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:layout_centerInParent="true"
            android:text="@string/affirm_buy"
            android:textColor="@color/white"
            android:textSize="20sp"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/rlTop"
        android:background="#d7d7d7"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="48dip"
            android:background="@color/titlebar" >

            <TextView
                android:id="@+id/tvMobile"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:gravity="center"
                android:text="@string/login_mobile"
                android:textColor="@color/titlebar_bottom_line_2"
                android:textSize="18.0dip" />
			<ImageView 
			    android:background="#FFDDDDDD"
			    android:layout_width="1dp"
			    android:layout_height="32dp"
			    android:layout_marginTop="8dp"/>
            <TextView
                android:id="@+id/tvAccount"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:gravity="center"
                android:text="@string/login_account"
                android:textSize="18.0dip" />
        </LinearLayout>

        <ImageView
            android:id="@+id/ivCursor"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scaleType="matrix"
            android:src="@drawable/nav_lvbg" />

        <android.support.v4.view.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.0"
            android:background="#FFFFFF"
            android:flipInterval="30"
            android:persistentDrawingCache="animation" />
    </LinearLayout>

</RelativeLayout>